language/move-lang/tests/move_check/parser/struct_type_misspelled_key_constraint.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_misspelled_key_constraint.move:3:17
  │
3 │     struct S<T: ky> { }
  │                 ^^ Unexpected 'ky'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'

