language/move-lang/tests/move_check/parser/struct_type_misspelled_key_constraint.move
module M {
    // Check misspelling of "key" constraint.
    struct S<T: ky> { }
}
